--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </ul>
                 </nav>
                 <div class="contato-btn">
-                    <a href="#" class="btn-primary" id="btnComp">Contate-nos</a>
+                    <a href="#" class="btn-primary" id="btnComp">Criadores</a>
                     <div class="dropdown js-dropdown">
                         <div class="item">
                             <img src="./img/gui.jpg" alt="">
@@ -44,12 +44,36 @@
                         <div class="item">
                             <img src="./img/nacleto.PNG" alt="">
                             <div class="text">
-                                <strong>Guilherme Leoni</strong>
+                                <strong>Fabrício Anacleto</strong>
                                 <ul>
                                     <li>Idade: 17</li>
                                     <li>Escola: IF Machado</li>
                                     <li>Cidade: Machado-MG</li>
-                                    <li>nacletin@gmail.com</li>
+                                    <li>fanacleto23@gmail.com</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="./img/juan.PNG" alt="">
+                            <div class="text">
+                                <strong>Juan Pablo Carvalho</strong>
+                                <ul>
+                                    <li>Idade: 17</li>
+                                    <li>Escola: IF Machado</li>
+                                    <li>Cidade: Machado-MG</li>
+                                    <li>juan.monteiro1983@gmail.com</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="./img/vitoria.PNG" alt="">
+                            <div class="text">
+                                <strong>Vitória Antoniela</strong>
+                                <ul>
+                                    <li>Idade: 17</li>
+                                    <li>Escola: IF Machado</li>
+                                    <li>Cidade: Machado-MG</li>
+                                    <li>vitoriaantoniela2019@gmail.com</li>
                                 </ul>
                             </div>
                         </div>
@@ -165,7 +189,6 @@
             </div>
         </div>
     </section>
-    <div style="height: 100vh;"></div>
     <script src="./js/index.js" ></script>
 </body>
 </html>
