--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <div class="text">
                                 <strong>Fabrício Anacleto</strong>
                                 <ul>
-                                    <li>Idade: 17</li>
+                                    <li>Idade: 18</li>
                                     <li>Escola: IF Machado</li>
                                     <li>Cidade: Machado-MG</li>
                                     <li>fanacleto23@gmail.com</li>
@@ -58,9 +58,9 @@
                             <div class="text">
                                 <strong>Juan Pablo Carvalho</strong>
                                 <ul>
-                                    <li>Idade: 17</li>
+                                    <li>Idade: 18</li>
                                     <li>Escola: IF Machado</li>
-                                    <li>Cidade: Machado-MG</li>
+                                    <li>Cidade: Boa Esperança-MG</li>
                                     <li>juan.monteiro1983@gmail.com</li>
                                 </ul>
                             </div>
@@ -70,9 +70,9 @@
                             <div class="text">
                                 <strong>Vitória Antoniela</strong>
                                 <ul>
-                                    <li>Idade: 17</li>
+                                    <li>Idade: 19</li>
                                     <li>Escola: IF Machado</li>
-                                    <li>Cidade: Machado-MG</li>
+                                    <li>Cidade: Alfenas-MG</li>
                                     <li>vitoriaantoniela2019@gmail.com</li>
                                 </ul>
                             </div>
@@ -189,6 +189,63 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container" id="contato">
+            <div class="main-footer">
+                <div class="f-contato">
+                    <h2>Contate-nos</h2>
+                    <form action="">
+                        <span>Nome</span>
+                        <input type="text">
+                        <span>Seu melhor e-mail:</span>
+                        <input type="text">
+                        <span>Escreva sua mensagem:</span>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </form>
+                    <a href="#" class="btn-primary" type="submit">ENVIAR</a>
+                </div>
+                <div class="f-social">
+                    <h4>Redes sociais</h4>
+                    <ul>
+                        <li><a href="#">
+                            <img src="./img/icon-twitter.svg" alt="">
+                            <span>Twitter</span>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="./img/icon-linkedin.svg" alt="">
+                            <span>LinkedIn</span>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="./img/icon-instagram.svg" alt="">
+                            <span>Instagram</span>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="./img/icon-facebook.svg" alt="">
+                            <span>Facebook</span>
+                        </a></li>
+                        <li><a href="#">
+                            <img src="./img/icon-gmail.svg" alt="">
+                            <span>G-mail</span>
+                        </a></li>
+                    </ul>
+                </div>
+                <div class="f-links">
+                    <h4>Nossos links</h4>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </div>
+                <div class="f-logo">
+                    <img src="./img/logo.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="f-end">
+            <span>© 2021 Copyright Connect Class</span>
+        </div>
+    </footer>
     <script src="./js/index.js" ></script>
 </body>
 </html>
