--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             </div>
                             <div class="info">
                                 <h4>Conteúdo acessível</h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est officia natus laborum quam nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, doloremque. Quos alias, laudantium asperiores dicta molestiae quasi cumque voluptatem quia totam veritatis. Quaerat ex saepe numquam mollitia blanditiis nemo cupiditate.</p>
+                                <p>Uma variedade de conteúdos de todas as matérias disponíveis, com a possibilidade de escolher aquele com melhor facilidade de compreensão para você.</p>
                             </div>
                             </a>
                         </li>
@@ -127,7 +127,7 @@
                             </div>
                             <div class="info">
                                 <h4>Renda extra.</h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est officia natus laborum quam nihil.</p>
+                                <p>Você professor que necessita de uma ajudinha com a renda, que tal uma preparação mais adequada para o EAD junto com uma renda extra.</p>
                             </div>
                             </a>
                         </li>
@@ -165,11 +165,13 @@
                     <div class="text" id="acessivel">
                         <h3>Conteúdo acessível</h3>
                         <ul>
-                            <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
-                            <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
-                            <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
-                            <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Acesse de qualquer lugar que estiver.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Escolha oque deseja aprender.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Você faz seu próprio horário.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Aulas de todas as matérias com diferentes professores.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Descubra uma nova maneira de aprender.</span></li>
                         </ul>
+                        <p>Uma variedade de conteúdos de todas as matérias disponíveis, com a possibilidade de escolher aquele com melhor facilidade de compreensão para você!</p>
                     </div>
                 </div>
                 <div class="card-secondy" id="renda">
@@ -184,6 +186,7 @@
                             <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
                             <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
                         </ul>
+                        <p>A você professor que necessita de uma ajudinha com a renda, que tal uma preparação mais adequada para o EAD junto com uma renda extra.</p>
                     </div>
                 </div>
             </div>
