--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav class="js-nav">
                     <ul >
                         <li><a href="#home" class="js-link-section">Home</a></li>
-                        <li><a href="#sobre" class="js-link-section">Sobre nós</a></li>
+                        <li><a href="#sobre" class="js-link-section">Nossa empresa</a></li>
                         <li><a href="#planos" class="js-link-section">Planos</a></li>
                         </li>
                         <li><a href="#contato" class="js-link-section">Contato</a></li>
@@ -87,8 +87,8 @@
         <div class="container">
             <div class="text" data-aos="fade-right">
                 <span>Fácil, rápido e prático.</span>
-                <h1>Educação mais próxima doque imagina!</h1>
-                <p>Ser professor não é simplesmente entrar numa sala de aula e ministrar a aula, ser professor vai muito mais além disso.</p>
+                <h1>Educação mais próxima do que imagina!</h1>
+                <p>Ser professor não é simplesmente entrar numa sala de aula e ministra-lá, ser professor vai muito mais além disso.</p>
                 <a href="#" class="btn-primary">Saiba mais</a>
                 <div class="conheca">
                     <div class="icon">
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="top" data-aos="fade-down">
                 <h2>Conheça as principais ofertas de nossa plataforma!</h2>
-                <p>Mais de 50 mil empresas utilizam.</p>
+                <p>Juntos pela educação.</p>
             </div>
             <div class="content" data-aos="fade-up-left">  
                     <ul>
@@ -127,30 +127,21 @@
                                 <img src="./img/icone-gaste-menos.svg" alt="">
                             </div>
                             <div class="info">
-                                <h4>Renda extra.</h4>
+                                <h4>Renda extra</h4>
                                 <p>Você professor que necessita de uma ajudinha com a renda, que tal uma preparação mais adequada para o EAD junto com uma renda extra.</p>
                             </div>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#capacitacao">
                             <div class="icon">
                                 <img src="./img/icone-autonomia.svg" alt="">
                             </div>
                             <div class="info">
-                                <h4>Autonomia e resultado</h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est officia natus laborum quam nihil.</p>
+                                <h4>Capacitação dos Professores</h4>
+                                <p>Os professores tem liberdade para definir os conteúdos e a forma com que irão disponibilizá-los.</p>
                             </div>
                             </a>
-                        </li>
-                        <li>
-                            <div class="icon">
-                                <img src="./img/icon-templates.svg" alt="">
-                            </div>
-                            <div class="info">
-                                <h4>Templates King</h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est officia natus laborum quam nihil.</p>
-                            </div>
                         </li>
                     </ul>
             </div>
@@ -182,14 +173,44 @@
                     <div class="text">
                         <h3 data-aos="fade-down">Renda extra</h3>
                         <ul data-aos="flip-left">
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Renda escalável de acordo com sua produtividade.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Disponibilize e venda seus conteúdos.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Atenda milhares de alunos espalhados pelo mundo todo.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Milhares de outras vantagens sem sair do seu sofá.</span></li>
+                        </ul>
+                        <p data-aos="zoom-in-up">A você professor que deseja mudar a maneira de como transmitir seu conteúdo, que tal uma preparação mais adequada para o EAD junto com uma renda extra.</p>
+                    </div>
+                </div>
+                <div class="card-try" id="capacitacao">
+                    <div class="img" >
+                        <img src="./img/capacitacao.png" alt="" data-aos="zoom-in">
+                    </div>
+                    <div class="text">
+                        <h3 data-aos="fade-down">Capacitação dos Professores</h3>
+                        <ul data-aos="flip-left">
                             <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
                             <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
                             <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
                             <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
                         </ul>
-                        <p data-aos="zoom-in-up">A você professor que necessita de uma ajudinha com a renda, que tal uma preparação mais adequada para o EAD junto com uma renda extra.</p>
+                        <p data-aos="zoom-in-up">A plataforma não só vende o conteúdo feito pelos professores, como também os capacita para que eles disponibilizem materiais de qualidade.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="s-sobre" id="sobre">
+        <div class="container">
+            <div class="text">
+                <h1>Proposta de nossa empresa.</h1>
+                <p>Os professores se cadastram na plataforma e com o pagamento de uma taxa, tem acesso vitalício a uma capacitação com sugestões de ferramentas que podem ser utilizadas para produção de suas aulas e materiais e, posteriormente, podem publicar seus conteúdos em formato de módulos, de acordo com os assuntos tratados neles. O professor impõe um valor ao que foi produzido por ele e a plataforma recebe uma porcentagem de 20% sobre cada módulo vendido. A livre concorrência entre professores de áreas semelhantes fará com que os preços não sejam elevados e consequentemente a qualidade dos conteúdos seja elevada.
+                Os alunos por sua vez também realizam um cadastro específico para eles na plataforma e tem acesso aos módulos que são subdivididos em categorias de acordo com a matéria e o assunto que tratam. Os alunos compram os cursos e tem acesso de 3 meses, 6 meses ou 1 ano ao curso, de acordo com o plano desejado.
+                A plataforma apresenta como diferenciais diversos fatores, dentre eles:
+                A autonomia oferecida aos professores. Os professores tem liberdade para definir os conteúdos e a forma com que irão disponibilizá-los.</p>
+                <a href="#" class="btn-primary">Saiba mais</a>
+            </div>
+            <div class="image">
+                <img src="./img/logo.png" alt=" image hero">
             </div>
         </div>
     </section>
