--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             </div>
                             <div class="info">
                                 <h4>Conteúdo acessível</h4>
-                                <p>Uma variedade de conteúdos de todas as matérias disponíveis, com a possibilidade de escolher aquele com melhor facilidade de compreensão para você.</p>
+                                <p>Uma variedade de conteúdos de todas as matérias disponíveis...</p>
                             </div>
                             </a>
                         </li>
@@ -128,7 +128,7 @@
                             </div>
                             <div class="info">
                                 <h4>Renda extra</h4>
-                                <p>Você professor que necessita de uma ajudinha com a renda, que tal uma preparação mais adequada para o EAD junto com uma renda extra.</p>
+                                <p>Você professor que deseja mudar a forma de transmitir seu conteúdo e sua renda...</p>
                             </div>
                             </a>
                         </li>
@@ -139,7 +139,7 @@
                             </div>
                             <div class="info">
                                 <h4>Capacitação dos Professores</h4>
-                                <p>Os professores tem liberdade para definir os conteúdos e a forma com que irão disponibilizá-los.</p>
+                                <p>Os professores tem liberdade para definir os conteúdos e a forma com que irão disponibilizá-los...</p>
                             </div>
                             </a>
                         </li>
@@ -158,7 +158,7 @@
                         <h3 data-aos="fade-down">Conteúdo acessível</h3>
                         <ul data-aos="flip-right">
                             <li><img src="./img/icon-check1.svg" alt=""><span>Acesse de qualquer lugar que estiver.</span></li>
-                            <li><img src="./img/icon-check1.svg" alt=""><span>Escolha oque deseja aprender.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Escolha o que deseja aprender.</span></li>
                             <li><img src="./img/icon-check1.svg" alt=""><span>Você faz seu próprio horário.</span></li>
                             <li><img src="./img/icon-check1.svg" alt=""><span>Aulas de todas as matérias com diferentes professores.</span></li>
                             <li><img src="./img/icon-check1.svg" alt=""><span>Descubra uma nova maneira de aprender.</span></li>
@@ -188,10 +188,10 @@
                     <div class="text">
                         <h3 data-aos="fade-down">Capacitação dos Professores</h3>
                         <ul data-aos="flip-left">
-                            <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
-                            <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
-                            <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
-                            <li><img src="./img/icon-check1.svg" alt=""><span>faciliade de acesso</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Dicas de inovações para deixar seu curso mais dinâmico.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Minicursos rápido para ajudá-lo na forma EAD.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Suporte técnico disponível.</span></li>
+                            <li><img src="./img/icon-check1.svg" alt=""><span>Professores também se tornam alunos.</span></li>
                         </ul>
                         <p data-aos="zoom-in-up">A plataforma não só vende o conteúdo feito pelos professores, como também os capacita para que eles disponibilizem materiais de qualidade.</p>
                     </div>
