--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <section class="s-sobre" id="sobre">
         <div class="container">
             <div class="text">
-                <h1>Proposta de nossa empresa.</h1>
+                <h1>Nossa empresa.</h1>
                 <p>Os professores se cadastram na plataforma e com o pagamento de uma taxa, tem acesso vitalício a uma capacitação com sugestões de ferramentas que podem ser utilizadas para produção de suas aulas e materiais e, posteriormente, podem publicar seus conteúdos em formato de módulos, de acordo com os assuntos tratados neles. O professor impõe um valor ao que foi produzido por ele e a plataforma recebe uma porcentagem de 20% sobre cada módulo vendido. A livre concorrência entre professores de áreas semelhantes fará com que os preços não sejam elevados e consequentemente a qualidade dos conteúdos seja elevada.
                 Os alunos por sua vez também realizam um cadastro específico para eles na plataforma e tem acesso aos módulos que são subdivididos em categorias de acordo com a matéria e o assunto que tratam. Os alunos compram os cursos e tem acesso de 3 meses, 6 meses ou 1 ano ao curso, de acordo com o plano desejado.
                 A plataforma apresenta como diferenciais diversos fatores, dentre eles:
